--- a/menu/index.html
+++ b/menu/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Menu Responsive</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400" rel="stylesheet">
 
     <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
