--- a/menu/index.html
+++ b/menu/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Menu Responsive</title>
     <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,700|Roboto:100,100i,300,300i,400" rel="stylesheet">
     <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
 
@@ -13,10 +12,10 @@
   <body>
     <nav class="menu-container">
       <ul class="menu-list">
-        <li class="menu-item"><a href="#home">Home</a></li>
-        <li class="menu-item"><a href="#about">About</a></li>
-        <li class="menu-item"><a href="#projects">Projects</a></li>
-        <li class="menu-item"><a href="#contact">Contact</a></li>
+        <li class="menu-item swing"><a href="#home">Home</a></li>
+        <li class="menu-item swing"><a href="#about">About</a></li>
+        <li class="menu-item swing"><a href="#projects">Projects</a></li>
+        <li class="menu-item swing"><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <div class="container">
