--- a/menu/index.html
+++ b/menu/index.html
@@ -7,17 +7,22 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,700|Roboto:100,100i,300,300i,400" rel="stylesheet">
     <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="menu-resize.js">
 
+    </script>
   </head>
   <body>
-    <nav class="menu-container">
-      <ul class="menu-list">
-        <li class="menu-item swing"><a href="#home">Home</a></li>
-        <li class="menu-item swing"><a href="#about">About</a></li>
-        <li class="menu-item swing"><a href="#projects">Projects</a></li>
-        <li class="menu-item swing"><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <header class="">
+      <nav class="menu-container">
+        <ul class="menu-list">
+          <li class="menu-item swing"><a href="#home">Home</a></li>
+          <li class="menu-item swing"><a href="#about">About</a></li>
+          <li class="menu-item swing"><a href="#projects">Projects</a></li>
+          <li class="menu-item swing"><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <div class="container">
       <div class="anchor"  id="home">
         <h1 class="heading">Home</h1>
